Fix align namespace

--- a/app/templates/utilities/_align.scss
+++ b/app/templates/utilities/_align.scss
@@ -22,7 +22,7 @@ $iota-utils-align-breakpoints: $iota-global-breakpoints;
  * Type: String
  */
 
-$iota-utils-align-namespace     : 'align';
+$iota-utils-align-namespace     : 'align-';
 $iota-utils-align-top-name      : 'top';
 $iota-utils-align-bottom-name   : 'bottom';
 $iota-utils-align-middle-name   : 'middle';
